# cpp-17-new-fetures

./: .gitignore  README.md
cmake/: CMakeLists.txt
cmake/optional-variant-any/: CMakeLists.txt
src/optional-variant-any/: main.cpp
